[package]
name = "token-read"
version = "0.1.2"
edition = "2021"

description = "A library for reading whitespace delimited files intended for competitive programming"
documentation = "https://docs.rs/token-read/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SvizelPritula/token-read"

build = "build.rs"

[dependencies]
arrayvec = "0.7.2"
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.68"
